# coursera_01_ibm_rag_and_agentic_ai

./: .gitignore  main.py  pyproject.toml
analysis_notebooks/: course_1_module_1_lab_In-Context Learning and Prompt Templates for Advanced AI.ipynb
