[project]
name = "coursera-01-ibm-rag-and-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ibm-watsonx-ai>=1.3.42",
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-ibm>=1.0.2",
]
